[gd_scene load_steps=7 format=3 uid="uid://dykwb0gmw81n2"]

[ext_resource type="Script" path="res://ui/player_hud.gd" id="1"]
[ext_resource type="Theme" uid="uid://dnfyfchbmcxbe" path="res://themes/large_ui_theme.tres" id="3"]
[ext_resource type="Theme" uid="uid://b5dkmxxjri631" path="res://themes/ui_bold_theme.tres" id="3_f4ltr"]

[sub_resource type="Animation" id="2"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("top_banner/CenterContainer/Panel:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.25098)]
}

[sub_resource type="Animation" id="3"]
resource_name = "control_fade"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("top_banner/CenterContainer/control_label:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("top_banner/CenterContainer/Panel:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.25098), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhlqw"]
_data = {
"RESET": SubResource("2"),
"control_fade": SubResource("3")
}

[node name="player_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="top_banner" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="top_banner"]
layout_mode = 2

[node name="Panel" type="Panel" parent="top_banner/CenterContainer"]
self_modulate = Color(0, 0, 0, 0.25098)
custom_minimum_size = Vector2(560, 60)
layout_mode = 2

[node name="control_label" type="RichTextLabel" parent="top_banner/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 70)
layout_mode = 2
theme = ExtResource("3")
bbcode_enabled = true
text = "[center]Control with WASD keys.[/center]"

[node name="gui" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -66.0
offset_right = 1274.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="game_info_label" type="RichTextLabel" parent="gui" groups=["points_ui"]]
clip_contents = false
layout_mode = 2
theme = ExtResource("3_f4ltr")
theme_override_font_sizes/normal_font_size = 48
text = "Points: 99999"

[node name="gui2" type="MarginContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -382.0
offset_top = -66.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="speed_label" type="RichTextLabel" parent="gui2"]
clip_contents = false
layout_mode = 2
theme = ExtResource("3_f4ltr")
theme_override_font_sizes/normal_font_size = 48
text = "Speed: 999m/s"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dhlqw")
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
